# compiler

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  file.x  flake.nix
cmake/: Cuda.cmake  Doxygen.cmake  Hardening.cmake  Linker.cmake  PackageProject.cmake  StaticAnalyzers.cmake  Tests.cmake
cmake/antlr/: FindANTLR.cmake
grammar/: CMakeLists.txt  X.g4
include/x/: common.h  common.hpp
include/x/ast/: ast.hpp  block.hpp  context.hpp  decl.hpp  expr.hpp  fwd_decl.hpp  label.hpp  module.hpp  stmt.hpp  toplevel.hpp  type.hpp
include/x/pt/: block.hpp  context.hpp  decl.hpp  expr.hpp  fwd_decl.hpp  module.hpp  node.hpp  path.hpp  pt.hpp  stmt.hpp  type.hpp
include/x/pt/sema/: fwd_decl.hpp  nameresolution.hpp
include/x/sema/: environment.hpp  fwd_decl.hpp  sema.hpp
parser/: CMakeLists.txt  x.g4
parser/.antlr/: TLexer.java  TParser.java  x.interp  x.tokens  xLexer.interp  xLexer.java  xParser.java
src/: CMakeLists.txt
src/antlr_test/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  block.cpp  context.cpp  decl.cpp  expr.cpp  module.cpp  stmt.cpp  type.cpp
src/compiler/: CMakeLists.txt  common.hpp  handroll.hpp  lower-ast.hpp  lower-pt.cpp  lower-pt.hpp  main.cpp
src/compiler/antlr/: exceptionErrorListener.hpp  visitor.cpp  visitor.hpp
src/compiler/ast/: types.cpp  types.hpp
src/compiler/compiler/: compiler.hpp  jit.cpp  jit.hpp
src/kaleidoscope/: CMakeLists.txt  Kaleidoscope.cpp  generator.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  types.cpp  types.hpp
src/kaleidoscope/ast/: CMakeLists.txt  expr.cpp  expr.hpp  function.cpp  function.hpp  helpers.hpp
src/pt/: CMakeLists.txt  block.cpp  context.cpp  decl.cpp  expr.cpp  module.cpp  node.cpp  path.cpp  stmt.cpp  type.cpp
src/pt/sema/: nameresolution.cpp
src/sample_library/: CMakeLists.txt
src/sema/: CMakeLists.txt  environment.cpp  sema.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
